// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixed with text highlighted 1`] = `
<div>
  <div
    className="document__header document__header--hidden"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <button
          className="document__button document__button--blue"
          onClick={[Function]}
        >
          Clear Selection
        </button>
        <button
          className="document__button document__button--red"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
      </div>
    </div>
  </div>
  <div
    className="document__header document__header--fixed"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <button
          className="document__button document__button--blue"
          onClick={[Function]}
        >
          Clear Selection
        </button>
        <button
          className="document__button document__button--red"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fixed without text highlighted 1`] = `
<div>
  <div
    className="document__header document__header--hidden"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <p
          className="document__instructions"
        >
          Highlight something to give your Take
        </p>
      </div>
    </div>
  </div>
  <div
    className="document__header document__header--fixed"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <p
          className="document__instructions"
        >
          Highlight something to give your Take
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scrolling with text highlighted 1`] = `
<div>
  <div
    className="document__header document__header--visible"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <button
          className="document__button document__button--blue"
          onClick={[Function]}
        >
          Clear Selection
        </button>
        <button
          className="document__button document__button--red"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
      </div>
    </div>
  </div>
  <div
    className="document__header document__header--hidden"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <button
          className="document__button document__button--blue"
          onClick={[Function]}
        >
          Clear Selection
        </button>
        <button
          className="document__button document__button--red"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scrolling without text highlighted 1`] = `
<div>
  <div
    className="document__header document__header--visible"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <p
          className="document__instructions"
        >
          Highlight something to give your Take
        </p>
      </div>
    </div>
  </div>
  <div
    className="document__header document__header--hidden"
  >
    <div>
      <h2
        className="document__heading"
      >
        Bill of Rights
      </h2>
      <div
        className="document__header-actions"
      >
        <p
          className="document__instructions"
        >
          Highlight something to give your Take
        </p>
      </div>
    </div>
  </div>
</div>
`;
